<resources>
    <string name="app_name">My Application</string>
    <string name="gps_desc">GPS位置更新：\n\n</string>
    <string name="gps_default_value"><![CDATA[<unknown>]]></string>
    <string name="gps_satellite_list">当前信噪比大于30的真星个数：</string>
    <string name="gps_list_title">GPS真星列表：</string>
    <string name="gps_bearing">导向：</string>
    <string name="gps_accuracy">精度：</string>
    <string name="gps_altitude">高度：</string>
    <string name="gps_speed">速度：</string>
    <string name="gps_latitude">纬度：</string>
    <string name="gps_longitude">经度：</string>
    <string name="gps_satellite_number">收星个数：</string>
    <string name="gps_timestamp">更新时间：</string>
    <string name="gps_fixed_state" />
    <string name="gps_fixed_time" />
</resources>