<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dip" >

        <!-- GPS information -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:layout_gravity="center_horizontal"
            android:background="#ff008b8b"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gps_info_title"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dip"
                android:paddingBottom="2dip"
                android:textSize="@dimen/test_size"
                android:text="@string/gps_desc"
                android:textColor="#ffeeee00"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border_rectangle"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">
                <TextView
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ff13579a"
                    android:textSize="@dimen/test_size"
                    android:text="@string/gps_fixed_time"/>
                <TextView
                    android:id="@+id/gps_fixed_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ff00ff00"
                    android:textSize="@dimen/test_size"
					android:text="@string/gps_default_value"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/gps_update_time"
                    android:layout_width="150dip"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dip"
                    android:textSize="@dimen/test_size"
                    android:text="@string/gps_timestamp"
                    android:textColor="#ff13579a" />
                <TextView
                    android:id="@+id/gps_timestamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ff00ff00"
                    android:textSize="@dimen/test_size"
					android:text="@string/gps_default_value"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/gps_satellites"
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ff13579a"
                    android:textSize="@dimen/test_size"
                    android:text="@string/gps_satellite_number"/>
                <TextView
                    android:id="@+id/gps_satellite_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ff00ff00"
                    android:textSize="@dimen/test_size"
					android:text="@string/gps_default_value"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ff13579a"
                    android:textSize="@dimen/test_size"
                    android:text="@string/gps_longitude"/>
                <TextView
                    android:id="@+id/gps_longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ff00ff00"
                    android:textSize="@dimen/test_size"
					android:text="@string/gps_default_value"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ff13579a"
                    android:textSize="@dimen/test_size"
                    android:text="@string/gps_latitude"/>
                <TextView
                    android:id="@+id/gps_latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ff00ff00"
                    android:textSize="@dimen/test_size"
					android:text="@string/gps_default_value"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ff13579a"
                    android:textSize="@dimen/test_size"
                    android:text="@string/gps_speed"/>
                <TextView
                    android:id="@+id/gps_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ff00ff00"
                    android:textSize="@dimen/test_size"
					android:text="@string/gps_default_value"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ff13579a"
                    android:textSize="@dimen/test_size"
                    android:text="@string/gps_altitude"/>
                <TextView
                    android:id="@+id/gps_altitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ff00ff00"
                    android:textSize="@dimen/test_size"
					android:text="@string/gps_default_value"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ff13579a"
                    android:textSize="@dimen/test_size"
                    android:text="@string/gps_accuracy"/>
                <TextView
                    android:id="@+id/gps_accuracy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ff00ff00"
                    android:textSize="@dimen/test_size"
					android:text="@string/gps_default_value"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ff13579a"
                    android:textSize="@dimen/test_size"
                    android:text="@string/gps_bearing"/>
                <TextView
                    android:id="@+id/gps_bearing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ff00ff00"
                    android:textSize="@dimen/test_size"
					android:text="@string/gps_default_value"/>
            </LinearLayout>
        </LinearLayout>

        <!-- GPS satellites -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:layout_gravity="center_horizontal"
            android:background="#ff008b8b"
            android:orientation="horizontal">
            <TextView
                android:paddingBottom="2dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dip"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffeeee00"
                android:textSize="@dimen/test_size"
                android:text="@string/gps_list_title"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/border_rectangle"
            android:orientation="vertical"
            android:scrollbars="none">

            <TextView
                android:id="@+id/satellite_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dip"
                android:text="@string/gps_satellite_list"
                android:textColor="#ffcc3377"
                android:textSize="@dimen/test_size"
                android:typeface="monospace" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/test_size"
                android:text="@string/button_start"
                android:id="@+id/start_gnss_test"
                android:onClick="startGnssTest"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/test_size"
                android:text="@string/button_back"
                android:id="@+id/back_gnss_test"
                android:onClick="backGnssTest"/>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
